--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 remote_theme: pages-themes/architect@v0.2.0
-title: [TomaszStr's site]
-description: [This is my website i hope you will like it :)]
+title: [Podgorek's site]
+description: [Oto moja strona]
